<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".AboutActivity">
<ImageView
    android:layout_width="96dp"
    android:layout_height="96dp"
    android:id="@+id/app_logo"
    android:layout_centerHorizontal="true"
    android:src="@drawable/team_logo"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:layout_below="@id/app_logo"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appVersion"
        android:layout_below="@id/app_name"
        android:text="@string/app_version"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copyright_text"
        android:layout_marginTop="24dp"
        android:layout_below="@id/appVersion"
        android:text="@string/copyright_text"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rights"
        android:layout_below="@id/copyright_text"
        android:text="@string/rights"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/team_logo"
        android:layout_below="@id/rights"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/team_logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/team_logo"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/fb_logo"
            android:scaleType="centerCrop"
            android:layout_marginRight="4dp"
            android:src="@drawable/fb_logo"
            />
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:id="@+id/twitter_logo"
            android:layout_marginRight="4dp"
            android:src="@drawable/twitter_logo"
            />
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/mail_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/mail_logo"
            />
    </LinearLayout>
</RelativeLayout>